# bazel-fakechroot

./: .bazelrc  BUILD.bazel  BUILD.bazel.fakechroot  MODULE.bazel  README.md  fakechroot.bzl  test.bzl
patches/: 0001-fakechroot.patch
