load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")
load(":test.bzl", "test_fakechroot")

configure_make(
    name = "fakechroot",
    configure_in_place = True,
    configure_options = [
        "--disable-static",
        "--enable-shared",
        "--disable-silent-rules",
    ],
    lib_source = "@fakechroot_src//:sources",
    out_lib_dir = "lib/fakechroot",
    out_shared_libs = ["libfakechroot.so"],
    visibility = ["//visibility:public"],
    alwayslink = True,
)


test_fakechroot(name = "test-fakechroot")
