module(
    name = "fakechroot",
    version = "2.20.1",
)

bazel_dep(name = "rules_cc", version = "0.0.9")

bazel_dep(name = "hermetic_cc_toolchain", version = "2.1.3")
archive_override(
    module_name = "hermetic_cc_toolchain",
    urls = [
        "https://github.com/uber/hermetic_cc_toolchain/archive/762c2cbf4eef6a15029cf62aebd0efbaf7ee1509.tar.gz",
    ],
    strip_prefix = "hermetic_cc_toolchain-762c2cbf4eef6a15029cf62aebd0efbaf7ee1509",
)

bazel_dep(name = "gazelle", version = "0.35.0")

bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")

use_repo(tools)

FAKEROOT_COMMIT="1617833d4bfa415cbe2fc1e961cb751e47697c24"
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "fakechroot_src",
    urls = [
        "https://github.com/dex4er/fakechroot/releases/download/2.20.1/fakechroot-2.20.1.tar.gz",
    ],
    integrity = "sha256-Wr0EMjyd2uBrXcqlay2gdyjeP+IQB7CL2IoXskCbMqo=",
    build_file = "//:BUILD.bazel.fakechroot",
    strip_prefix = "fakechroot-2.20.1",
    patches = [
        ":patches/0001-fakechroot.patch",
    ],
    patch_args = [
        "-p1"
    ],
)
